@@ -1,7 +1,7 @@
 Package: EGAnet
 Title: Exploratory Graph Analysis – a Framework for Estimating the Number of Dimensions in Multivariate Data using Network Psychometrics
 Version: 2.4.0
-Date: 2025-11-22
+Date: 2025-12-02
 Authors@R: c(person("Hudson", "Golino", email = "hfg9s@virginia.edu", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-1601-1447")),
 	     person("Alexander", "Christensen", email = "alexpaulchristensen@gmail.com", role = "aut", comment = c(ORCID = "0000-0002-9798-7037")),
 	     person("Robert", "Moulder", email = "rgm4fd@virginia.edu", role = "ctb", comment = c(ORCID = "0000-0001-7504-9560")),
@@ -25,12 +25,11 @@ Depends: R (>= 3.5.0)
 License: AGPL (>= 3.0)
 Encoding: UTF-8
 LazyData: true
-Imports: dendextend, fungible, future, future.apply,
+Imports: clue, dendextend, future, future.apply,
 	     GGally, ggplot2, ggpubr, glasso, glassoFast, 
 	     GPArotation, igraph (>= 1.3.0), lavaan, Matrix, 
 	     methods, network, progressr, qgraph, semPlot, sna, stats
-Suggests: DEoptim, fitdistrplus, gridExtra, knitr, markdown,
-          pbapply, progress, psych, pwr, RColorBrewer
+Suggests: fitdistrplus, gridExtra, pbapply, progress, psych, pwr, RColorBrewer
 URL: https://r-ega.net
 BugReports: https://github.com/hfgolino/EGAnet/issues
 RoxygenNote: 7.3.3
