@@ -109,6 +109,7 @@ export(invariance)
 export(itemDiagnostics)
 export(itemStability)
 export(jsd)
+export(known.graph)
 export(modularity)
 export(net.loads)
 export(net.scores)
